tests/ui/parser/issues/issue-20616-2.stderr
error: expected one of `,` or `>`, found `(`
  --> $DIR/issue-20616-2.rs:12:31
   |
LL | type Type_2 = Type_1_<'static ()>;
   |                               ^ expected one of `,` or `>`
   |
help: you might have meant to end the type parameters here
   |
LL | type Type_2 = Type_1_<'static> ()>;
   |                              +

error: aborting due to 1 previous error

